# SmartMem-Purple-Agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
src/: .env  agent.py  executor.py  server.py  tools.py
src/memory/: fifo.py
src/purple_agent/: .env  .env.template  agent.py  prompts.py  tools.py
src/purple_agent/memory/: __init__.py  base.py  fifo.py  lru.py  schema.py  semantic.py
tests/: test_agent.py
