[project]
name = "smartmem-purple-agent"
version = "0.1.0"
description = "The purple agent of smartmem benchmark."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "json-repair>=0.55.0",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
